# dvbtrans

./: .autotools  .gitignore  .project  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
doc/: Makefile.in
etc/dvb/: dvb_scan.txt  dvbtrans.conf  records.txt  weurope.txt
etc/init.d/: dvbtrans
lib/systemd/system/: dvbtrans.service
m4/: Makefile.in
src/: Makefile.am  Makefile.in  charset.c  charset.h  dvb_scan.c  dvbprogd.c  dvbtrans.c  dvbtrans.h  dvbviewer.c  dvbviewer.h  dynarray.c  dynarray.h  http_server.c  http_server.h  nettools.c  nettools.h  props.c  props.h  recorder.c  recorder.h  tcpterm.c  tcpterm.h  test_http.c  utils.c  utils.h
tests/: Makefile.am  Makefile.in  test_http.c
